test/classes/deitz/test_inherit_mod1.good
test_inherit_mod1.chpl:17: In function 'foo':
test_inherit_mod1.chpl:18: error: unresolved call 'C.x'
test_inherit_mod1.chpl:4: note: candidates are: D1.x
test_inherit_mod1.chpl:8: note:                 D2.x
